# CC-GUI

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  playwright-ct.config.ts  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml.example
.claude/skills/run-app/: SKILL.md
.claude/skills/update-claude-commander/: SKILL.md
.github/workflows/: ci.yml  release.yml  tests.yml
.husky/: pre-commit
.impeccable/: design.json
.impeccable/critique/: 2026-07-24T16-36-15Z__src-main-ts.md
docs/: example-theme.json  theming.md
docs/ideas/: programs-list.md
docs/ui-overhaul/design_handoff_cc_gui_reimagining/: CC-GUI Reimagined.dc.html  README.md
docs/ui-refactor/design_handoff_cc_gui_refined/: CC-GUI Audit.dc.html  README.md
plans/: move-session-dnd.md  split-screen.md  testing.md  ui-overhaul.md  ui-refactor.md
scripts/: release.sh
src/: dom.ts  fileExplorer.ts  harnessPicker.ts  help.ts  keys.test.ts  keys.ts  main.ts  menu.ts  palette.test.ts  palette.ts  resize.ts  review.ts  settings.ts  status.test.ts  status.ts  style.css  tauri-mock.spike.test.ts  theme-prototype.html  theme.test.ts  theme.ts  themeModal.ts  toast.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cascade.rs  commander.rs  files.rs  groups.rs  main.rs  polling.rs  projects.rs  pty.rs  review.rs  service.rs  sessions.rs  settings.rs  themes.rs
src/assets/fonts/: LICENSE.txt
src/playwright/iwft/network/: TauriSimulator.testHelper.ts  seed.testHelper.ts  types.testHelper.ts
src/playwright/iwft/scenarios/board/: board.iwft.ts
src/playwright/iwft/scenarios/detail/: detail.iwft.ts
src/playwright/iwft/scenarios/dialogs/: dialogs.iwft.ts
src/playwright/iwft/scenarios/fileExplorer/: fileExplorer.iwft.ts
src/playwright/iwft/scenarios/harnessPicker/: harnessPicker.iwft.ts
src/playwright/iwft/scenarios/onboarding/: firstRun.iwft.ts
src/playwright/iwft/scenarios/palette/: palette.iwft.ts
src/playwright/iwft/scenarios/review/: review.iwft.ts
src/playwright/iwft/support/: fixture.testHelper.ts  globalSetup.testHelper.ts  launchApp.testHelper.ts  paths.testHelper.ts
src/playwright/pageObjects/: AppPageObject.testHelper.ts  BoardPageObject.testHelper.ts  DetailPanePageObject.testHelper.ts  DialogsPageObject.testHelper.ts  FileExplorerPageObject.testHelper.ts  OnboardingPageObject.testHelper.ts  PalettePageObject.testHelper.ts  ReviewPanePageObject.testHelper.ts  SettingsModalPageObject.testHelper.ts  SidebarPageObject.testHelper.ts  TerminalPageObject.testHelper.ts  ThemePickerPageObject.testHelper.ts
src/review/: model.test.ts  model.ts
(+8 files in other folders)
