[package]
name = "cc-gui"
version = "0.1.0"
edition = "2021"
description = "GUI for claude-commander"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["rt", "sync", "time"] }
uuid = "1"

# Spike shortcut: path dependency on the local checkout. Switch to a pinned
# git dependency (rev = "...") once the spike settles — see PLAN.md.
claude-commander = { path = "../../claude-commander" }
futures = "0.3.32"
tracing = "0.1.44"
chrono = "0.4.45"
