[package]
name = "cc-gui"
version = "0.9.0"
edition = "2021"
description = "GUI for claude-commander"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
portable-pty = "0.9"
tokio = { version = "1", features = ["rt", "sync", "time"] }
uuid = "1"

# Pinned to a published claude-commander release for reproducible builds. To
# develop against a local checkout instead, add a gitignored `.cargo/config.toml`
# with `paths = ["../claude-commander"]` — see CONTRIBUTING.md.
claude-commander-core = { git = "https://github.com/sizeak/claude-commander", tag = "v0.24.0" }
futures = "0.3.32"
tracing = "0.1.44"
chrono = "0.4.45"

[dev-dependencies]
tempfile = "3"
